修改打包属性

--- a/Adai.DbContext/Adai.DbContext.csproj
+++ b/Adai.DbContext/Adai.DbContext.csproj
@@ -8,6 +8,7 @@
 		<AssemblyVersion>2.1.0.3</AssemblyVersion>
 		<FileVersion>2.1.0.3</FileVersion>
 		<PackageReleaseNotes>无</PackageReleaseNotes>
+		<PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<RepositoryUrl>https://github.com/doublefish/Adai.git</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
