--- a/Adai.DbContext.SqlClient/Adai.DbContext.SqlClient.csproj
+++ b/Adai.DbContext.SqlClient/Adai.DbContext.SqlClient.csproj
@@ -3,28 +3,28 @@
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.1;net5.0;net6.0</TargetFrameworks>
 		<Authors>Shuang Yu</Authors>
-		<Company>CCN</Company>
+		<Company>Adai</Company>
 		<Version>1.0.0.0</Version>
 		<AssemblyVersion>1.0.0.0</AssemblyVersion>
 		<FileVersion>1.0.0.0</FileVersion>
 		<PackageReleaseNotes>无</PackageReleaseNotes>
 		<PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<RepositoryUrl>https://gitlab.yesno.com.cn/base/ccn.dbcontext</RepositoryUrl>
+		<RepositoryUrl>https://github.com/doublefish/Adai.DbContext.git</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<Description>数据库访问基础类库 - MSSQL</Description>
-		<Copyright>© CCN. All rights reserved.</Copyright>
-		<PackageProjectUrl>http://www.yesno.com.cn/</PackageProjectUrl>
+		<Copyright>© Shuang Yu. All rights reserved.</Copyright>
+		<PackageProjectUrl>https://github.com/doublefish/Adai.DbContext/</PackageProjectUrl>
 		<PackageIcon></PackageIcon>
-		<PackageTags>CCN DbContext Microsoft SQL Server SqlClient MSSQL</PackageTags>
+		<PackageTags>DbContext SqlClient Adai.DbContext.SqlClient</PackageTags>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-		<DocumentationFile>CCN.DbContext.SqlClient.xml</DocumentationFile>
+		<DocumentationFile>Adai.DbContext.SqlClient.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<DocumentationFile>CCN.DbContext.SqlClient.xml</DocumentationFile>
+		<DocumentationFile>Adai.DbContext.SqlClient.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
