--- a/AhDai.DbContext.MySql/AhDai.DbContext.MySql.csproj
+++ b/AhDai.DbContext.MySql/AhDai.DbContext.MySql.csproj
@@ -15,7 +15,7 @@
 		<!--<PackageReadmeFile>README.md</PackageReadmeFile>-->
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-		<PackageTags>DbContext MySql AhDai.DbContext.MySql</PackageTags>
+		<PackageTags>AhDai;DbContext;MySql</PackageTags>
 		<RepositoryUrl>https://github.com/doublefish/AhDai.DbContext</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
