--- a/AhDai.DbContext.Oracle/AhDai.DbContext.Oracle.csproj
+++ b/AhDai.DbContext.Oracle/AhDai.DbContext.Oracle.csproj
@@ -15,7 +15,7 @@
 		<!--<PackageReadmeFile>README.md</PackageReadmeFile>-->
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-		<PackageTags>DbContext Oracle AhDai.DbContext.Oracle</PackageTags>
+		<PackageTags>AhDai;DbContext;Oracle</PackageTags>
 		<RepositoryUrl>https://github.com/doublefish/AhDai.DbContext</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
