--- a/AhDai.DbContext.SQLite/AhDai.DbContext.SQLite.csproj
+++ b/AhDai.DbContext.SQLite/AhDai.DbContext.SQLite.csproj
@@ -15,7 +15,7 @@
 		<!--<PackageReadmeFile>README.md</PackageReadmeFile>-->
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-		<PackageTags>DbContext SQLite AhDai.DbContext.SQLite</PackageTags>
+		<PackageTags>AhDai;DbContext;SQLite</PackageTags>
 		<RepositoryUrl>https://github.com/doublefish/AhDai.DbContext</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
